# sample-plot

./: LICENSE  README.md  config.yml  pyproject.toml
sample_data/: data.csv
sampleplot/: main.py
sampleplot/plots/: bar_plot.py  line_plot.py
sampleplot/utils/: data_loader.py
tests/: test_main.py  test_plots.py
